# das-big-txt-file-viewer

./: .gitignore  CMakeLists.txt  README.md
src/: BfvMainWindow.cxx  BfvMainWindow.hxx  BfvMainWindow.ui  main.cxx
